AUTOMAKE_OPTIONS=foreign
CC=mips-openwrt-linux-uclibc-gcc
LD=mips-openwrt-linux-uclibc-ld
CFLAGS=-g -O2 -I/home/chenzp/openwrt/chaos_calmer/staging_dir/target-mips_34kc_uClibc-0.9.33.2/usr/include -D_GNU_SOURCE
LDFLAGS=-L/home/chenzp/openwrt/chaos_calmer/staging_dir/target-mips_34kc_uClibc-0.9.33.2/usr/lib
bin_PROGRAMS=tunet
tunet_SOURCES=http_header.c http_header.h main.c md5.h tunet.c tunet.h md5.c
tunet_LDADD=
